# InfiniCare

./: README.md  database_schema.sql  project_requirements.md  pyproject.toml  setup_database.py  test_soil_upload.py  test_user_setup.py
attached_assets/: Pasted-Reve-Sponsored-Track-Algorithm-Development-Hackathon-Introduction-Reve-is-pleased-to-sponsor-a-sp-1743302957685.txt
farmtech_project/: README.md  manage.py  requirements.txt
farmtech_project/core/: admin.py  ai_utils.py  forms.py  healthcare_analyzer.py  image_processor.py  models.py  soil_analyzer.py  tests.py  urls.py  views.py
farmtech_project/core/migrations/: 0001_initial.py
farmtech_project/farmtech_project/: __init__.py  asgi.py  settings.py  wsgi.py
farmtech_project/static/css/: dashboard.css  main.css
farmtech_project/static/js/: chatbot.js  dashboard.js  main.js
farmtech_project/templates/: base.html
farmtech_project/templates/core/: analysis_results.html  chatbot.html  dashboard.html  healthcare_analysis_results.html  index.html  login.html  signup.html  soil_analysis_results.html  upload.html  upload_healthcare.html
test_images/: generate_test_image.py
